--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "forever": "^1.0.0",
+    "forever": "^4.0.1",
     "koa": "^2.7.0",
-    "koa-body": "^4.1.1",
+    "koa-body": "^4.1.0",
     "koa-router": "^7.4.0",
-    "koa2-cors": "^2.0.6"
+    "koa2-cors": "^2.0.6",
+    "nanoid": "^2.0.3"
   }
 }
